--- a/apps/core/templates/home.html
+++ b/apps/core/templates/home.html
@@ -2,6 +2,7 @@
 {% load static %}
 {%block content%}
 <div class="row">
+    Wellington
     <div class="col-sm-12">
         <div class="statistics-details d-flex align-items-center justify-content-between">
             <div>
