--- a/apps/core/templates/pets/pets_form.html
+++ b/apps/core/templates/pets/pets_form.html
@@ -6,12 +6,12 @@
 <div class="col-md-12 grid-margin stretch-card ">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Atualizar de tipos de serviços</h4>
+            <h4 class="card-title">Cadastrar pet</h4>
             <form class="forms-sample" method="post" action="{% url 'apps:core:pet_create' %}">
                 <div class="form-group">
                     {% csrf_token %}
                     {{form}}
-                    <button type="submit" class="btn btn-primary mr-2">Atualizar</button>
+                    <button type="submit" class="btn btn-primary mr-2">Cadastrar</button>
                 </div>
             </form>
         </div>
